# ski-lint

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
ski_lint/: __init__.py  cli.py  config.py  line_analysis_result.py  utils.py
tests/: conftest.py  test_cli.py
tests/files/bad/: cyrillic.txt  zero-width-space.txt
